--- a/FuelStationApp/Resources.resx
+++ b/FuelStationApp/Resources.resx
@@ -121,8 +121,8 @@
   <data name="delete_16x164" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\delete_16x164.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="showallsubtotalsattoppivottable_32x322" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\showallsubtotalsattoppivottable_32x322.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="showproduct_32x321" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\showproduct_32x321.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="add_16x161" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\add_16x161.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -166,14 +166,14 @@
   <data name="showallsubtotalsattoppivottable_16x162" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\showallsubtotalsattoppivottable_16x162.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="showproduct_32x321" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\showproduct_32x321.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="delete_32x324" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\delete_32x324.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="open_16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\open_16x16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="showallsubtotalsattoppivottable_32x322" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\showallsubtotalsattoppivottable_32x322.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="delete_16x163" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\delete_16x163.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -256,8 +256,14 @@
   <data name="save_32x323" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\save_32x323.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="showproduct_16x161" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\showproduct_16x161.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="add_32x321" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\add_32x321.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="save_32x325" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\save_32x325.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="AccountCredentialsSelect" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>queries\accountcredentialsselect.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
@@ -286,7 +292,7 @@
   <data name="add_32x325" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\add_32x325.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="showproduct_16x161" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\showproduct_16x161.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="save_16x165" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\save_16x165.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
